Style: fix wrong font-family.

--- a/src/scss/main/_typography.scss
+++ b/src/scss/main/_typography.scss
@@ -59,7 +59,8 @@ a {
 
   &.top {
     font-size: 26px; 
-    font-family: $font-family-text;
+    font-family: $font-family-header;
+    font-weight: bold;
   }
 }
 
